--- a/game-design-review.html
+++ b/game-design-review.html
@@ -957,17 +957,17 @@
 
                 <div class="sidebar-section">
                     <h3><i class="fas fa-users"></i> Team Management</h3>
-                    <button class="btn btn-primary" onclick="taskManager.showAddMemberModal()" style="width: 100%; margin-bottom: 0.5rem;">
+                    <button class="btn btn-primary" id="addMemberBtn" style="width: 100%; margin-bottom: 0.5rem;">
                         <i class="fas fa-user-plus"></i> Add Team Member
                     </button>
-                    <button class="btn btn-secondary" onclick="taskManager.showTeamMembers()" style="width: 100%;">
+                    <button class="btn btn-secondary" id="viewTeamMembersBtn" style="width: 100%;">
                         <i class="fas fa-users"></i> View Team Members
                     </button>
                 </div>
 
                 <div class="sidebar-section">
                     <h3><i class="fas fa-archive"></i> Deleted Tasks</h3>
-                    <button class="btn btn-secondary" onclick="taskManager.showDeletedTasks()" style="width: 100%;">
+                    <button class="btn btn-secondary" id="viewDeletedTasksBtn" style="width: 100%;">
                         <i class="fas fa-trash"></i> View Deleted Tasks
                     </button>
                 </div>
