--- a/game-design-review.html
+++ b/game-design-review.html
@@ -854,9 +854,142 @@
             color: #475569;
         }
 
-        .empty-state p {
-            color: #94a3b8;
-        }
+                 .empty-state p {
+             color: #94a3b8;
+         }
+
+         .task-media-section {
+             margin-top: 1.5rem;
+         }
+
+         .task-media-section h4 {
+             color: #1e293b;
+             font-size: 1rem;
+             font-weight: 600;
+             margin-bottom: 0.75rem;
+         }
+
+         .media-grid {
+             display: grid;
+             grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+             gap: 0.75rem;
+             margin-bottom: 1rem;
+         }
+
+         .media-item {
+             position: relative;
+             border-radius: 0.5rem;
+             overflow: hidden;
+             cursor: pointer;
+             transition: all 0.3s ease;
+             border: 2px solid rgba(226, 232, 240, 0.5);
+         }
+
+         .media-item:hover {
+             transform: scale(1.05);
+             border-color: #3b82f6;
+             box-shadow: 0 4px 15px rgba(59, 130, 246, 0.3);
+         }
+
+         .media-item img {
+             width: 100%;
+             height: 80px;
+             object-fit: cover;
+             display: block;
+         }
+
+         .media-item.video {
+             background: #1e293b;
+             display: flex;
+             align-items: center;
+             justify-content: center;
+             height: 80px;
+         }
+
+         .media-item.video::before {
+             content: '\f144';
+             font-family: 'Font Awesome 6 Free';
+             font-weight: 900;
+             color: white;
+             font-size: 1.5rem;
+         }
+
+         .media-thumbnail {
+             display: inline-block;
+             width: 60px;
+             height: 40px;
+             object-fit: cover;
+             border-radius: 0.25rem;
+             margin-right: 0.5rem;
+             border: 1px solid rgba(226, 232, 240, 0.5);
+         }
+
+         .media-modal {
+             display: none;
+             position: fixed;
+             top: 0;
+             left: 0;
+             width: 100%;
+             height: 100%;
+             background: rgba(0, 0, 0, 0.9);
+             backdrop-filter: blur(5px);
+             z-index: 2000;
+             align-items: center;
+             justify-content: center;
+             animation: fadeIn 0.3s ease;
+         }
+
+         .media-modal.active {
+             display: flex;
+         }
+
+         .media-modal-content {
+             max-width: 90vw;
+             max-height: 90vh;
+             position: relative;
+             background: transparent;
+         }
+
+         .media-modal-content img {
+             max-width: 100%;
+             max-height: 90vh;
+             object-fit: contain;
+             border-radius: 0.5rem;
+             box-shadow: 0 20px 40px rgba(0, 0, 0, 0.5);
+         }
+
+         .media-modal-content iframe {
+             width: 90vw;
+             height: 70vh;
+             border: none;
+             border-radius: 0.5rem;
+             box-shadow: 0 20px 40px rgba(0, 0, 0, 0.5);
+         }
+
+         .media-modal-close {
+             position: absolute;
+             top: -3rem;
+             right: 0;
+             background: none;
+             border: none;
+             color: white;
+             font-size: 2rem;
+             cursor: pointer;
+             padding: 0.5rem;
+             border-radius: 0.5rem;
+             transition: all 0.3s ease;
+         }
+
+         .media-modal-close:hover {
+             background: rgba(255, 255, 255, 0.1);
+             transform: scale(1.1);
+         }
+
+         .media-count {
+             color: #64748b;
+             font-size: 0.875rem;
+             margin-left: 0.5rem;
+         }
 
         @media (max-width: 768px) {
             .app-container {
@@ -1004,10 +1137,15 @@
                     <label for="taskTitle">Task Title</label>
                     <input type="text" id="taskTitle" required>
                 </div>
-                <div class="form-group">
-                    <label for="taskDescription">Description</label>
-                    <textarea id="taskDescription" placeholder="Describe the task..."></textarea>
-                </div>
+                                 <div class="form-group">
+                     <label for="taskDescription">Description</label>
+                     <textarea id="taskDescription" placeholder="Describe the task..."></textarea>
+                 </div>
+                 <div class="form-group">
+                     <label for="taskMediaLinks">Media Links (Optional)</label>
+                     <textarea id="taskMediaLinks" placeholder="Add image or video URLs, one per line...&#10;Example:&#10;https://example.com/image.jpg&#10;https://youtube.com/watch?v=VIDEO_ID"></textarea>
+                     <small style="color: #64748b; font-size: 0.875rem;">Supported: Images (.jpg, .png, .gif, .webp) and YouTube videos</small>
+                 </div>
                 <div class="form-group">
                     <label for="taskCategory">Category</label>
                     <select id="taskCategory" required>
@@ -1182,20 +1320,30 @@
         </div>
     </div>
 
-    <!-- Deleted Tasks Modal -->
-    <div id="deletedTasksModal" class="modal">
-        <div class="modal-content" style="max-width: 800px; max-height: 80vh;">
-            <div class="modal-header">
-                <h2>Deleted Tasks</h2>
-                <button class="close-btn" onclick="closeModal('deletedTasksModal')">&times;</button>
-            </div>
-            <div class="modal-body">
-                <div id="deletedTasksList">
-                    <!-- Deleted tasks will be populated here -->
-                </div>
-            </div>
-        </div>
-    </div>
+         <!-- Media Modal -->
+     <div id="mediaModal" class="media-modal">
+         <div class="media-modal-content">
+             <button class="media-modal-close" onclick="closeMediaModal()">&times;</button>
+             <div id="mediaModalContent">
+                 <!-- Media content will be populated here -->
+             </div>
+         </div>
+     </div>
+
+     <!-- Deleted Tasks Modal -->
+     <div id="deletedTasksModal" class="modal">
+         <div class="modal-content" style="max-width: 800px; max-height: 80vh;">
+             <div class="modal-header">
+                 <h2>Deleted Tasks</h2>
+                 <button class="close-btn" onclick="closeModal('deletedTasksModal')">&times;</button>
+             </div>
+             <div class="modal-body">
+                 <div id="deletedTasksList">
+                     <!-- Deleted tasks will be populated here -->
+                 </div>
+             </div>
+         </div>
+     </div>
 
     <script src="github-storage.js"></script>
     <script src="game-review.js"></script>
