--- a/game-design-review.html
+++ b/game-design-review.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Design Review System</title>
+    <title>The Sandbox Game Review</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -1034,7 +1034,7 @@
     <div class="app-container">
         <!-- Header -->
         <header class="header">
-            <h1><i class="fas fa-gamepad"></i> <span id="gameTitle">Game Design Review</span></h1>
+            <h1><i class="fas fa-gamepad"></i> <span id="gameTitle">The Sandbox Game Review</span></h1>
             <div class="header-actions">
                 <button id="backBtn" class="btn btn-secondary">
                     <i class="fas fa-arrow-left"></i> Back to Games
