--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Design Review System</title>
+    <title>The Sandbox Game Review</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -550,7 +550,7 @@
     <div class="app-container">
         <!-- Header -->
         <header class="header">
-            <h1><i class="fas fa-gamepad"></i> Game Design Review System</h1>
+            <h1><i class="fas fa-gamepad"></i> The Sandbox Game Review</h1>
             <div class="header-actions">
                 <button id="addGameBtn" class="btn btn-primary">
                     <i class="fas fa-plus"></i> Add Game
